Update contact links (Email, LinkedIn, GitHub)

--- a/index.html
+++ b/index.html
@@ -355,13 +355,13 @@
                     <br>¡Hablemos! Estoy disponible para colaboraciones.
                 </p>
                 <div class="contact-links">
-                    <a href="mailto:tu-email@ejemplo.com" class="contact-btn">
+                    <a href="mailto:francogonzaloarce@gmail.com" class="contact-btn">
                         Email
                     </a>
-                    <a href="https://linkedin.com/in/tu-perfil" target="_blank" class="contact-btn">
+                    <a href="https://www.linkedin.com/in/franco-arce-37a83a220/" target="_blank" class="contact-btn">
                         LinkedIn
                     </a>
-                    <a href="https://github.com/tu-usuario" target="_blank" class="contact-btn">
+                    <a href="https://github.com/Franco-Arce" target="_blank" class="contact-btn">
                         GitHub
                     </a>
                 </div>
