Update footer quote

--- a/index.html
+++ b/index.html
@@ -376,9 +376,9 @@
                 <span class="footer-vintage">~ The End ~</span>
                 <br><br>
                 <span class="footer-quote">
-                    "El mayor enemigo del conocimiento no es la ignorancia, es la ilusión del conocimiento."
+                    "Donde hay humo de datos, hay fuego empresarial."
                     <br>
-                    <span class="quote-author">- Stephen Hawking</span>
+                    <span class="quote-author">- Thomas Redman</span>
                 </span>
                 <br><br>
                 Hecho con datos por Franco Arce © 2025
