--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
-                <img src="Avatar.png" class="deco-avatar avatar-header" alt="Franco Avatar">
+                <img src="Avatar.webp" class="deco-avatar avatar-header" alt="Franco Avatar">
                 <h2 class="section-title">Sobre Mí</h2>
             </div>
             <div class="about-content">
@@ -142,12 +142,12 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Proyectos</h2>
-                <img src="Avatar2.png" class="deco-avatar avatar-header" alt="Proyectos Avatar">
+                <img src="Avatar2.webp" class="deco-avatar avatar-header" alt="Proyectos Avatar">
             </div>
             <div class="projects-grid">
                 <!-- Winnie The Food -->
                 <div class="project-card">
-                    <img src="WinnieTheFood.png" alt="Winnie The Food App" class="project-image">
+                    <img src="WinnieTheFood.webp" alt="Winnie The Food App" class="project-image">
                     <div class="project-header">
                         <h3 class="project-title">Winnie The Food</h3>
                     </div>
@@ -171,7 +171,7 @@
 
                 <!-- DataChef -->
                 <div class="project-card">
-                    <img src="Datachef.png" alt="DataChef Dashboard" class="project-image">
+                    <img src="Datachef.webp" alt="DataChef Dashboard" class="project-image">
                     <div class="project-header">
                         <h3 class="project-title">DataChef</h3>
                     </div>
@@ -196,7 +196,7 @@
 
                 <!-- CodeFlow Capital -->
                 <div class="project-card">
-                    <img src="CodeflowCapital.png" alt="CodeFlow Capital App" class="project-image">
+                    <img src="CodeflowCapital.webp" alt="CodeFlow Capital App" class="project-image">
                     <div class="project-header">
                         <h3 class="project-title">CodeFlow Capital</h3>
                     </div>
@@ -219,7 +219,7 @@
 
                 <!-- Lead Scoring -->
                 <div class="project-card">
-                    <img src="LeadScoring.png" alt="Lead Scoring System" class="project-image">
+                    <img src="LeadScoring.webp" alt="Lead Scoring System" class="project-image">
                     <div class="project-header">
                         <h3 class="project-title">Lead Scoring AI</h3>
                     </div>
@@ -243,7 +243,7 @@
 
                 <!-- Fraud Detection -->
                 <div class="project-card">
-                    <img src="Deteccionfraude.png" alt="Fraud Detection Model" class="project-image">
+                    <img src="Deteccionfraude.webp" alt="Fraud Detection Model" class="project-image">
                     <div class="project-header">
                         <h3 class="project-title">Detección de Fraude</h3>
                     </div>
@@ -266,7 +266,7 @@
 
                 <!-- ETL Pipeline -->
                 <div class="project-card">
-                    <img src="pipelineETl.png" alt="ETL Pipeline Architecture" class="project-image">
+                    <img src="pipelineETl.webp" alt="ETL Pipeline Architecture" class="project-image">
                     <div class="project-header">
                         <h3 class="project-title">Pipeline ETL</h3>
                     </div>
@@ -295,7 +295,7 @@
     <section id="experience" class="experience">
         <div class="container">
             <div class="section-header">
-                <img src="Avatar3.png" class="deco-avatar avatar-header" alt="Experiencia Avatar">
+                <img src="Avatar3.webp" class="deco-avatar avatar-header" alt="Experiencia Avatar">
                 <h2 class="section-title">Experiencia</h2>
             </div>
             <div class="timeline">
@@ -347,7 +347,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Contacto</h2>
-                <img src="Avatar4.png" class="deco-avatar avatar-header" alt="Contacto Avatar">
+                <img src="Avatar4.webp" class="deco-avatar avatar-header" alt="Contacto Avatar">
             </div>
             <div class="contact-content">
                 <p class="contact-description">
