Implement smart splash screen, lazy loading, and background stars

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Special+Elite&family=Courier+Prime:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <!-- Resource Hints -->
+    <link rel="preload" href="Avatar.webp" as="image">
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Special+Elite&family=Courier+Prime:wght@400;700&display=swap"
+        as="style">
 </head>
 
 <body>
@@ -74,6 +79,14 @@
             <span class="star star-6">★</span>
             <span class="star star-7">★</span>
             <span class="star star-8">★</span>
+            <span class="star star-8">★</span>
+            <!-- New lightweight particles -->
+            <span class="star star-9">★</span>
+            <span class="star star-10">★</span>
+            <span class="star star-11">★</span>
+            <span class="star star-12">★</span>
+            <span class="star star-13">★</span>
+            <span class="star star-14">★</span>
         </div>
     </section>
 
@@ -142,12 +155,12 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Proyectos</h2>
-                <img src="Avatar2.webp" class="deco-avatar avatar-header" alt="Proyectos Avatar">
+                <img src="Avatar2.webp" class="deco-avatar avatar-header" alt="Proyectos Avatar" loading="lazy">
             </div>
             <div class="projects-grid">
                 <!-- Winnie The Food -->
                 <div class="project-card">
-                    <img src="WinnieTheFood.webp" alt="Winnie The Food App" class="project-image">
+                    <img src="WinnieTheFood.webp" alt="Winnie The Food App" class="project-image" loading="lazy">
                     <div class="project-header">
                         <h3 class="project-title">Winnie The Food</h3>
                     </div>
@@ -171,7 +184,7 @@
 
                 <!-- DataChef -->
                 <div class="project-card">
-                    <img src="Datachef.webp" alt="DataChef Dashboard" class="project-image">
+                    <img src="Datachef.webp" alt="DataChef Dashboard" class="project-image" loading="lazy">
                     <div class="project-header">
                         <h3 class="project-title">DataChef</h3>
                     </div>
@@ -196,7 +209,7 @@
 
                 <!-- CodeFlow Capital -->
                 <div class="project-card">
-                    <img src="CodeflowCapital.webp" alt="CodeFlow Capital App" class="project-image">
+                    <img src="CodeflowCapital.webp" alt="CodeFlow Capital App" class="project-image" loading="lazy">
                     <div class="project-header">
                         <h3 class="project-title">CodeFlow Capital</h3>
                     </div>
@@ -219,7 +232,7 @@
 
                 <!-- Lead Scoring -->
                 <div class="project-card">
-                    <img src="LeadScoring.webp" alt="Lead Scoring System" class="project-image">
+                    <img src="LeadScoring.webp" alt="Lead Scoring System" class="project-image" loading="lazy">
                     <div class="project-header">
                         <h3 class="project-title">Lead Scoring AI</h3>
                     </div>
@@ -243,7 +256,7 @@
 
                 <!-- Fraud Detection -->
                 <div class="project-card">
-                    <img src="Deteccionfraude.webp" alt="Fraud Detection Model" class="project-image">
+                    <img src="Deteccionfraude.webp" alt="Fraud Detection Model" class="project-image" loading="lazy">
                     <div class="project-header">
                         <h3 class="project-title">Detección de Fraude</h3>
                     </div>
@@ -266,7 +279,7 @@
 
                 <!-- ETL Pipeline -->
                 <div class="project-card">
-                    <img src="pipelineETl.webp" alt="ETL Pipeline Architecture" class="project-image">
+                    <img src="pipelineETl.webp" alt="ETL Pipeline Architecture" class="project-image" loading="lazy">
                     <div class="project-header">
                         <h3 class="project-title">Pipeline ETL</h3>
                     </div>
@@ -295,7 +308,7 @@
     <section id="experience" class="experience">
         <div class="container">
             <div class="section-header">
-                <img src="Avatar3.webp" class="deco-avatar avatar-header" alt="Experiencia Avatar">
+                <img src="Avatar3.webp" class="deco-avatar avatar-header" alt="Experiencia Avatar" loading="lazy">
                 <h2 class="section-title">Experiencia</h2>
             </div>
             <div class="timeline">
@@ -347,7 +360,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Contacto</h2>
-                <img src="Avatar4.webp" class="deco-avatar avatar-header" alt="Contacto Avatar">
+                <img src="Avatar4.webp" class="deco-avatar avatar-header" alt="Contacto Avatar" loading="lazy">
             </div>
             <div class="contact-content">
                 <p class="contact-description">
