fix: improve background shape coverage and distribution using grid system

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <!-- Film Grain & Vignette -->
     <div class="film-grain"></div>
     <div class="vignette"></div>
+    <!-- Decorative Stars (Fixed Background) -->
+    <div class="decorative-stars"></div>
 
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
@@ -73,30 +75,6 @@
                     <a href="#contact" class="btn-secondary">Contactar</a>
                 </div>
             </div>
-            <div class="decorative-stars">
-                <span class="star star-1">★</span>
-                <span class="star star-2">★</span>
-                <span class="star star-3">★</span>
-                <span class="star star-4">★</span>
-                <span class="star star-5">★</span>
-                <span class="star star-6">★</span>
-                <span class="star star-7">★</span>
-                <span class="star star-8">★</span>
-                <span class="star star-8">★</span>
-                <!-- New lightweight particles -->
-                <span class="star star-9">★</span>
-                <span class="star star-10">★</span>
-                <span class="star star-11">★</span>
-                <span class="star star-12">★</span>
-                <span class="star star-13">★</span>
-                <span class="star star-14">★</span>
-                <!-- Rubber Hose Shapes -->
-                <span class="star cross-1">+</span>
-                <span class="star cross-2">+</span>
-                <span class="star cross-3">+</span>
-                <span class="star diamond-1">◆</span>
-                <span class="star diamond-2">◆</span>
-                <span class="star diamond-3">◆</span>
             </div>
         </section>
 
