refactor: standardize about section header to align avatar to the side

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         <!-- About Section -->
         <section id="about" class="about">
             <div class="container">
-                <div class="avatar-container">
-                    <img src="Avatar_small.webp" alt="Franco Arce - Data Analyst Avatar" class="avatar" id="avatar"
-                        width="280" height="280">
+                <div class="section-header">
+                    <img src="Avatar_small.webp" class="deco-avatar avatar-header"
+                        alt="Franco Arce - Data Analyst Avatar" loading="lazy">
+                    <h2 class="section-title">Sobre Mí</h2>
                 </div>
-                <h2 class="section-title">Sobre Mí</h2>
             </div>
             <div class="about-content">
                 <div class="about-text">
